# rentalProject

./: .gitignore  README.md  pyproject.toml
django/rental_project/account/: forms.py  models.py  urls.py  views.py
django/rental_project/account/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_active_user_is_staff_and_more.py  0003_alter_user_options_user_date_joined_user_first_name_and_more.py
django/rental_project/account/static/css/: styles.css
django/rental_project/account/templates/: base.html  change_password.html  change_password_done.html  home.html  login.html  register.html
django/rental_project/rental/: forms.py  urls.py  utils.py  views.py
django/rental_project/rental_project/: asgi.py  settings.py  urls.py  wsgi.py
django/rental_project/templates/: base.html
django/rental_project/templates/rental/: create_group.html  explore.html  group.html  groups.html  home.html  host.html  main_page.html  product.html
fastapi/: config.py  create_db.py  database.py  dependencies.py  main.py  settings.py
fastapi/migrations/: env.py
fastapi/migrations/versions/: 01c0168ca4b0_.py  22688e7e9948_rewrite_models_in_classes.py  6a841a336675_add_ai_to_id.py  bfdff0fa9892_clear_db.py  d567cc0a7f85_update_apartment_models.py  d83b438559fd_create_table.py
fastapi/src/: crud.py  database.py  main.py  models.py  schemas.py
fastapi/src/api/: routers.py
fastapi/src/api/endpoints/: apartment.py  group.py
fastapi/src/operations/: models.py  router.py  schemas.py
fastapi/src/rental/: models.py  router.py  schemas.py
(+1 files in other folders)
